Prototype for the segmentation of an image with CLIJ